[tool.poetry]
name = "the-internet-robot"
version = "0.1.0"
description = ""
authors = ["crrmail <preeyamon.tester@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.4"
robotframework = "^7.1.1"
robotframework-seleniumlibrary = "^6.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
